pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-nil-endpointslice-port-value.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-nil-endpointslice-port-value
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - backend:
              service:
                name: whoami-nil-port-value
                port:
                  number: 80
            path: /
            pathType: Prefix
